--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Html template</title>
 </head>
+
 <body>
-    <h1># HTML Template</h1>
+    <main>
+        <h1 id="boardTitle">
+            Leaderboard
+        </h1>
+        <section id="boardDisplay">
+            <h3>Reacent scores</h3>
+            <div id="refreshBtn"><button> Refresh</button></div>
+            <table id="customers">
+                <tr>
+                    <th>Name</th>
+                    <th>Score</th>
+                </tr>
+                <tr>
+                    <td>test</td>
+                    <td>45</td>
+                </tr>
+                <tr>
+                    <td>test</td>
+                    <td>45</td>
+                </tr>
+                <tr>
+                    <td>test</td>
+                    <td>45</td>
+                </tr>
+                <tr>
+                    <td>test</td>
+                    <td>45</td>
+                </tr>
+            </table>
+        </section>
+        <section id="boardForm">
+            <h3>Add your score</h3>
+            <form action="">
+                <input type="text" name="username" id="username" required>
+                <input type="number" name="score" id="score" required>
+                <input type="submit" value="Submit">
+            </form>
+        </section>
+    </main>
 </body>
 </html>
