--- a/src/index.html
+++ b/src/index.html
@@ -40,10 +40,10 @@
         </section>
         <section id="boardForm">
             <h3>Add your score</h3>
-            <form action="">
-                <input type="text" name="username" id="username" required>
-                <input type="number" name="score" id="score" required>
-                <input type="submit" value="Submit">
+            <form id="socreForm" action="">
+                <input type="text" name="username" id="nameInput" placeholder="Name" required>
+                <input type="number" name="score" id="scoreInput" placeholder="Score" required>
+                <input type="submit" value="Submit" id="submitBtn">
             </form>
         </section>
     </main>
