Repo: add github workflow

--- a/src/index.html
+++ b/src/index.html
@@ -9,32 +9,16 @@
 
 <body>
     <main>
-        <h1 id="boardTitle">
-            Leaderboard
-        </h1>
         <section id="boardDisplay">
+            <h1 id="boardTitle">
+                LEADERBOARD
+            </h1>
             <h3>Reacent scores</h3>
             <div id="refreshBtn"><button> Refresh</button></div>
-            <table id="customers">
+            <table id="table">
                 <tr>
                     <th>Name</th>
                     <th>Score</th>
-                </tr>
-                <tr>
-                    <td>test</td>
-                    <td>45</td>
-                </tr>
-                <tr>
-                    <td>test</td>
-                    <td>45</td>
-                </tr>
-                <tr>
-                    <td>test</td>
-                    <td>45</td>
-                </tr>
-                <tr>
-                    <td>test</td>
-                    <td>45</td>
                 </tr>
             </table>
         </section>
