--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Html template</title>
+    <title>LEADERBOARD</title>
 </head>
 
 <body>
@@ -14,7 +14,9 @@
                 LEADERBOARD
             </h1>
             <h3>Reacent scores</h3>
-            <div id="refreshBtn"><button> Refresh</button></div>
+            <div id="refreshBtn">
+                <button type="submit">Refresh</button>
+            </div>
             <table id="table">
                 <tr>
                     <th>Name</th>
@@ -24,7 +26,7 @@
         </section>
         <section id="boardForm">
             <h3>Add your score</h3>
-            <form id="socreForm" action="">
+            <form id="socreForm">
                 <input type="text" name="username" id="nameInput" placeholder="Name" required>
                 <input type="number" name="score" id="scoreInput" placeholder="Score" required>
                 <input type="submit" value="Submit" id="submitBtn">
