Feat: link Front-end side with api functions

--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,8 @@
                 LEADERBOARD
             </h1>
             <h3>Reacent scores</h3>
-            <div id="refreshBtn">
-                <button type="submit">Refresh</button>
+            <div id="refreshDiv">
+                <button id="refreshBtn" type="button">Refresh</button>
             </div>
             <table id="table">
                 <tr>
@@ -34,4 +34,5 @@
         </section>
     </main>
 </body>
+
 </html>
