Feat: show error on negtive scores

--- a/src/index.html
+++ b/src/index.html
@@ -26,11 +26,13 @@
         </section>
         <section id="boardForm">
             <h3>Add your score</h3>
-            <form id="socreForm">
+            <form id="scoreForm">
                 <input type="text" name="username" id="nameInput" placeholder="Name" required>
                 <input type="number" name="score" id="scoreInput" placeholder="Score" required>
                 <input type="submit" value="Submit" id="submitBtn">
             </form>
+            <div id="errors">
+            </div>
         </section>
     </main>
 </body>
